DTGB-406: Fixed footer link color contrast.

--- a/components/31-molecules/blocks/disclaimer-block/_disclaimer-block.scss
+++ b/components/31-molecules/blocks/disclaimer-block/_disclaimer-block.scss
@@ -10,4 +10,8 @@
     margin: 0;
     list-style: none;
   }
+
+  a {
+    @include theme('color', 'color-primary--darken-1', 'disclaimer-block-link-color');
+  }
 }
